--- a/VendingMachine/css/style.css
+++ b/VendingMachine/css/style.css
@@ -5,18 +5,110 @@
 body{
    background-color: #4e1109; 
 }
-.text{
-    font-family: bungee, sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    color: #fff;
+.container2 .text{
+    text-align: center;
+}
+.container2 .text span{
+    z-index: 8;
     position: absolute;
+    top: 90px;
+    left: 150px;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 70px;
+    white-space: nowrap;
+    font-family: 'Monoton', cursive;
+    animation: text 3s infinite;
+}
+@keyframes text{
+    0%, 40%, 42%, 44% {
+        color: #222;
+        text-shadow: -3px 0px 5px #222, 0px 0px 2px #222
+    }
+    41%, 43%, 45%, 100%{
+        color: #fff;
+        text-shadow: -3px 0px 5px #fff, 0px 0px 2px #fff
+    }
+}
+.container2 .waibukuang{
+    position: absolute;
+    width: 1400px;
+    height: 650px;
+    background-color: transparent;
+    border: dashed 4px #fff;
+    margin-left: 14px;
+    margin-top: 20px;
+
+}
+.container2 .neibukuang{
+    position: absolute;
+    width: 1380px;
+    height: 630px;
+    background-color: transparent;
+    border: dashed 4px #fff;
+    margin-left: 24px;
+    margin-top: 30px;
+}
+.container2 .img678{
+    display: flex;
+    justify-content: space-around;
+    position: absolute;
+    width: 700px;
+    height: auto;
+    top: 380px;
+    left: 110px;
+}
+.container2 .img678 .img6 img{
+    width: 100px;
+    height: auto;
+    filter: drop-shadow(5px 5px 5px #111);
+    animation: rotate 3s infinite ease-in-out;
+}
+.container2 .img678 .img7 img{
+    width: 100px;
+    height: auto;
+    filter: drop-shadow(5px 5px 5px #111);
+    animation: rotate 3s infinite ease-in-out;
+}
+.container2 .img678 .img8 img{
+    width: 100px;
+    height: auto;
+    filter: drop-shadow(5px 5px 5px #111);
+    animation: rotate 3s infinite ease-in-out;
+}
+@keyframes rotate{
+    0%{
+        transform: rotate(-10deg)
+    }
+    25%{
+        transform: rotate(0deg)
+    }
+    50%{
+        transform: rotate(10deg)
+    }
+    75%{
+        transform: rotate(0deg)
+    }
+    100%{
+        transform: rotate(-10deg)
+    }
+}
+
+.container .img5{
+    width: 390px;
+    height: 480px;
+    position: absolute;
+    top: -13px;
+}
+.container .img5 img{
+    width: 100%;
+    height: auto;
+    filter: drop-shadow(15px 20px 15px #111);
 }
 .container .machinemainbody .img2{
     position: absolute;
     width: 100px;
     height: 190px;
-    margin-left: 267px;
+    margin-left: 280px;
     margin-top: 10px;
     z-index: 10;
 }
@@ -28,7 +120,7 @@ body{
     position: absolute;
     width: 50px;
     height: 50px;
-    margin-left: 260px;
+    margin-left: 270px;
     margin-top: 5px;
     z-index: 9;
 }
@@ -38,12 +130,12 @@ body{
 }
 .container .anniu a{
     position: absolute;
-    width: 40px;
+    width: 55px;
     height: 15px;
     border-radius: 30px;
     border: transparent;
     margin-top: 320px;
-    margin-left: 269px;
+    margin-left: 260px;
     border: solid 4px rgb(61, 60, 48) ;
     background-color: rgb(37, 37, 29);
     cursor: pointer
@@ -56,7 +148,7 @@ body{
     width: 50px;
     height: 80px;
     margin-top: 220px;
-    margin-left: 265px;
+    margin-left: 263px;
     border-radius: 5px;
     border: solid 3px rgb(61, 60, 48)  ;
     background-color: rgb(37, 37, 29) ;
@@ -70,10 +162,12 @@ body{
     opacity: 80%;
 }
 .container{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
+    width: 390px;
+    height: 480px;
+    position: relative;
+    left: 900px;
+    top: 115px;
+
 }
 .container .machinemainbody{
     position: relative;
@@ -84,6 +178,7 @@ body{
     border-width: 3px;
     border-style: solid;
     background-color: rgb(134, 131, 106);
+    margin: 0 auto;
     z-index: 9;
 }
 .container .machinemainbody .machinebody{
