--- a/VendingMachine/css/spacezong.css
+++ b/VendingMachine/css/spacezong.css
@@ -62,6 +62,9 @@ body{
     width: auto;
     height: 250px;
 }
+.container3 .img13 img:hover{
+    transform: scale(0.9);
+}
 .container3 .img13:hover .text13{
     display: block;
 }
