--- a/VendingMachine/css/spacezong.css
+++ b/VendingMachine/css/spacezong.css
@@ -25,15 +25,19 @@ body{
 }
 .topredmargin{
     width: 1200px;
-    height: 60px;
+    height: 80px;
     background-color: #4e1109;
     margin: 0 auto;
 }
-.container2 .title{
+.container2 .title span{
     text-align: center;
     font-size: 55px;
     font-family: 'Righteous', cursive;
-    margin-top: 60px;
+    position: absolute;
+    top: 170px;
+    left: 320px;
+    margin: auto;
+    white-space: nowrap;
 }
 .container3 .img131415{
     display: flex;
@@ -41,6 +45,7 @@ body{
     align-items: center;
     position: absolute;
     left: 150px;
+    top: 200px;
     width: 1000px;
     height: 270px;
 }
@@ -68,14 +73,6 @@ body{
 .container3 .img13:hover .text13{
     display: block;
 }
-.container5{
-    display: none;
-    justify-content: space-around;
-    align-items: center;
-    width: 69vmax;
-    position: absolute;
-    left: 233px;
-}
 .text13{
     display: none;
     position: absolute;
@@ -93,19 +90,51 @@ body{
     margin-top: 7.5px;
     color: #fff;
 }
-.container5 .text14{
-    position: relative;
+.text14{
+    display: none;
+    position: absolute;
     top: 300px;
+    left: 480px;
     width: 200px;
     height: 50px;
-    background-color: blueviolet;
+    background-color: #111;
+    border-radius: 30px;
 }
-.container5 .text15{
-    position: relative;
+.text14 p{
+    text-align: center;
+    font-size: 25px;
+    font-family: 'Righteous', cursive;
+    margin-top: 7.5px;
+    color: #fff;
+}
+.container3 .img14 img:hover{
+    transform: scale(0.9);
+}
+.container3 .img14:hover .text14{
+    display: block;
+}
+.text15{
+    display: none;
+    position: absolute;
     top: 300px;
+    left: 810px;
     width: 200px;
     height: 50px;
-    background-color: blueviolet;
+    background-color: #111;
+    border-radius: 30px;
+}
+.text15 p{
+    text-align: center;
+    font-size: 25px;
+    font-family: 'Righteous', cursive;
+    margin-top: 7.5px;
+    color: #fff;
+}
+.container3 .img15 img:hover{
+    transform: scale(0.9);
+}
+.container3 .img15:hover .text15{
+    display: block;
 }
 .container4{
     display: flex;
@@ -136,4 +165,99 @@ body{
     opacity: 80%;
     width: 45px;
     height: auto;
+}
+.hengxian .hengxian1{
+    background-color: #111;
+    width: 810px;
+    height: 5px;
+    position: absolute;
+    left: 326px;
+    top: 170px;
+    margin: 0 auto;
+    border-radius: 20px;
+}
+.menu .img16{
+    width: 50px;
+    height: 40px;
+    position: static;
+    top: 20px;
+    left: 140px;
+    opacity: 80%;
+    cursor: pointer;
+
+}
+.menu .img16 img{
+    width: 100%;
+    height: auto;
+}
+.container5, .nav, .menu{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.nav{
+    position: absolute;
+    top: 1px;
+    left: 130px;
+    background-color: transparent;
+    padding: 20px;
+    transform: 0.5s;
+    overflow: hidden;
+    border-radius: 50px;
+}
+.menu{
+    margin: 0;
+    padding: 0;
+    width: 0;
+    overflow: hidden;
+    transition: 0.5s;
+}
+.nav input:checked ~ .menu{
+    width: 300px;
+}
+.menu li{
+    list-style: none;
+    margin: 0 10px;
+}
+.menu li a{
+    text-decoration: none;
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: 600;
+    transition: 0.5s;
+    white-space: nowrap;
+}
+.menu li a:hover{
+    opacity: 60%;
+}
+.nav input{
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    opacity: 0;
+}
+.nav span{
+    position: absolute;
+    left: 25px;
+    width: 30px;
+    height: 4px;
+    border-radius: 50px;
+    background-color: #fff;
+    pointer-events: none;
+    transition: 0.5s;
+}
+.nav input:checked ~span{
+    background-color: #fff;
+}
+.nav span:nth-child(2){
+    transform: translateY(-8px);
+}
+.nav input:checked ~ span:nth-child(2){
+    transform: translateY(0) rotate(-45deg);
+}
+.nav span:nth-child(3){
+    transform: translateY(8px);
+}
+.nav input:checked ~ span:nth-child(3){
+    transform: translateY(0) rotate(45deg);
 }
