--- a/VendingMachine/css/style.css
+++ b/VendingMachine/css/style.css
@@ -37,7 +37,6 @@ body{
     border: dashed 4px #fff;
     margin-left: 14px;
     margin-top: 20px;
-
 }
 .container2 .neibukuang{
     position: absolute;
@@ -140,7 +139,7 @@ body{
     width: auto;
     height: 100%; 
 }
-.container .anniu a{
+.container .anniu{
     position: absolute;
     width: 55px;
     height: 15px;
@@ -150,11 +149,46 @@ body{
     margin-left: 260px;
     border: solid 4px rgb(61, 60, 48) ;
     background-color: rgb(37, 37, 29);
-    cursor: pointer
+    cursor: pointer;
+    z-index: 1001;
 }
-.container .anniu a:hover{
-    opacity: 80%;
+.container .anniu .img15{
+    position: absolute;
+    top: 0px;
+    left: -160px;
+    width: 30px;
+    height: auto;
+    transform: rotate(-90deg);
+    z-index: 999;
+    display: none;
+
 }
+.container .anniu .img15 img{
+    width: 100%;
+    height: auto;
+}
+.container .anniu:active .img15{
+    display: block;
+    animation: luoxia 0.5s ease-out forwards;
+}
+@keyframes luoxia{
+    0%{
+        opacity: 0%;
+        position: absolute;
+        top: 0px;
+    }
+    20%{
+        opacity: 0%;
+        position: absolute;
+        top: 15px;
+    }
+    100%{
+        opacity: 100%;
+        position: absolute;
+        top: 38px;
+    }
+}
+
 .container .machinemainbody .jisuanpan{
     position: absolute;
     width: 50px;
@@ -230,6 +264,64 @@ body{
     margin-top: 190px;
     border-top: solid 2px #111;
     border-bottom: solid 2px #111;
+}
+.yinliaolan3{
+    position: absolute;
+    width: 200px;
+    height: 50px;
+    top: 65px;
+}
+.yinliaolan3 .yinliaox4{
+    justify-content: space-around;
+    display: flex;
+}
+.yinliaolan3 .yinliaox4 img{
+    width: 15%;
+    height: auto;
+    filter: drop-shadow(2px 2px 2px #111);
+}
+.yinliaolan3 .yinliaox4 img:hover{
+    animation: xuanzhuan 2s infinite linear;
+}
+@keyframes xuanzhuan{
+    0%{
+        transform: rotate(0deg);
+    }
+    50%{
+        transform: rotate(180deg);
+    }
+    100%{
+        transform: rotate(360deg);
+    }
+}
+.yinliaolan4{
+    position: absolute;
+    width: 200px;
+    height: 50px;
+    top: 160px;
+}
+.yinliaolan4 .yinliaox42{
+    justify-content: space-around;
+    display: flex;
+}
+.yinliaolan4 .yinliaox42 img{
+    width: 15%;
+    height: auto;
+    filter: drop-shadow(2px 2px 2px #111);
+}
+.yinliaolan4 .yinliaox42 img:hover{
+    animation: xuanzhuan 2s infinite linear;
+}
+@keyframes xuanzhuan{
+    0%{
+        transform: rotate(0deg);
+    }
+    50%{
+        transform: rotate(180deg);
+    }
+    100%{
+        transform: rotate(360deg);
+    }
 }
 .container .machinemainbody .machinebody .yinliaoqu .yinliaolan1 .jiweix4{
     display: flex;
@@ -325,6 +417,7 @@ body{
     width: 185px;
     height: 15px;
     border-radius: 3px;
+    z-index: 1000;
 }
 .container .machinemainbody .machinebody .yinliaokou .yinliaokoushang .triangledown{
     width: 0;
@@ -334,14 +427,7 @@ body{
     border-top: 10px solid rgb(163, 142, 109);
     margin-left: 77.5px;
     opacity: 70%;
-}
-.container .machinemainbody .machinebody .yinliaokou .yinliaokoushang .Getithere{
-    font-family: neue-kabel, sans-serif;
-    font-style: normal;
-    font-weight: 100;
-    text-align: center;
-    color: rgb(15, 13, 13);
-    margin-top: 50px;
+    z-index: 1000;
 }
 .container .machinemainbody .machinebody .xianduan2{
     background-color: #111;
@@ -358,4 +444,14 @@ body{
     margin: 0 auto;
     border-radius: 0 0 20px 20px;
     z-index: 11;
+}
+.click p{
+    color: #fff;
+    position: absolute;
+    left: 300px;
+    top: 570px;
+    font-size: 30px;
+    font-family: 'DotGothic16', sans-serif;
+    opacity: 50%;
+    white-space: nowrap;
 }
