--- a/VendingMachine/css/text.css
+++ b/VendingMachine/css/text.css
@@ -24,7 +24,7 @@ body{
 }
 .topredmargin{
     width: 1200px;
-    height: 60px;
+    height: 80px;
     background-color: #4e1109;
     margin: 0 auto;
 }
@@ -225,4 +225,75 @@ body{
     opacity: 80%;
     width: 45px;
     height: auto;
+}
+.container5, .nav, .menu{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.nav{
+    position: absolute;
+    top: 1px;
+    left: 130px;
+    background-color: transparent;
+    padding: 20px;
+    transform: 0.5s;
+    overflow: hidden;
+    border-radius: 50px;
+}
+.menu{
+    margin: 0;
+    padding: 0;
+    width: 0;
+    overflow: hidden;
+    transition: 0.5s;
+}
+.nav input:checked ~ .menu{
+    width: 300px;
+}
+.menu li{
+    list-style: none;
+    margin: 0 10px;
+}
+.menu li a{
+    text-decoration: none;
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: 600;
+    transition: 0.5s;
+    white-space: nowrap;
+}
+.menu li a:hover{
+    opacity: 60%;
+}
+.nav input{
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    opacity: 0;
+}
+.nav span{
+    position: absolute;
+    left: 25px;
+    width: 30px;
+    height: 4px;
+    border-radius: 50px;
+    background-color: #fff;
+    pointer-events: none;
+    transition: 0.5s;
+}
+.nav input:checked ~span{
+    background-color: #fff;
+}
+.nav span:nth-child(2){
+    transform: translateY(-8px);
+}
+.nav input:checked ~ span:nth-child(2){
+    transform: translateY(0) rotate(-45deg);
+}
+.nav span:nth-child(3){
+    transform: translateY(8px);
+}
+.nav input:checked ~ span:nth-child(3){
+    transform: translateY(0) rotate(45deg);
 }
